@@ -7,6 +7,7 @@ README
 scripts/tkgvizmakefile
 t/gm.t
 t/Make-mgv
+t/Make-mgv-norecipe
 t/Make-nosubst
 t/Make-subst
 xt/manifest.t
