@@ -1,0 +1,12 @@
+all: foo
+all: bar
+
+any: foo hiya
+	echo larry
+	echo howdy
+any: blah blow
+
+foo:: blah boo
+	echo Hi
+foo:: howdy buz
+	echo Hey
