@@ -3,6 +3,7 @@
 - add generate_tree method
 - deprecate mutating generate method
 - better styling for GraphViz
+- add nodes for recipes too
 
 1.18
 	- stable release with changes in 1.17_50 .. 1.17_51
